--- a/public/main.css
+++ b/public/main.css
@@ -114,6 +114,13 @@
 }
 
 
+.buttons {
+  flex-direction: row;
+display: flex;
+justify-content: space-between;
+margin: 5vh 0 5vh 0vh;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -130,17 +137,48 @@
   position: relative;
 }
 
-.textbox {
+/* .textbox {
   width: 100%;
   height: 400px;
   top: -12px;
   left: 0;
   text-align: center;
-}
+} */
 
 .content {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  background-color: var(--color-background);
   padding-left: 10%;
   padding-right: 10%;
+  border-radius: 10px;
+ 
+}
+
+.hero-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+button {
+  background-color:transparent;
+  color: var(--color-dark-gold);
+  border: 2px solid var(--color-dark-gold);
+  cursor: pointer;
+  height: 50px;
+  width: 191px;
+  text-align: center;
+  vertical-align: middle;
+  -o-transition: .15s ease-in-out;
+  border-radius: 33.5px;
+  justify-content: center;
+  align-items: center;
+  transition: all .15s ease-in-out;
+  display: flex;
 }
 
 #testimonial .content {
@@ -177,14 +215,14 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('../fonts/Latinotype - Recoleta Regular.otf') format("opentype");
+  src: url('../fonts/Recoleta-Regular.otf') format("opentype");
 }
 
 @font-face {
   font-family: 'Recoleta-Semibold';
   font-weight: 600;
   font-display: swap;
-  src: url('../fonts/Latinotype - Recoleta SemiBold.otf') format("opentype");
+  src: url('../public/fonts/Recoleta-SemiBold.otf') format("opentype");
 }
 
 
@@ -192,7 +230,7 @@
   font-family: 'Kish';
   font-weight: 600;
   font-display: swap;
-  src: url('../fonts/Kish-Bold-Ultra-Wide.otf') format("opentype");
+  src: url('../public/fonts/Kish-Bold-Ultra-Wide.otf') format("opentype");
 }
 
 
@@ -245,6 +283,7 @@ body {
   font-family: Recoleta, Georgia, serif;
   height:  100vh;
   overflow: auto;
+  background-color: ghostwhite;
 }
 
 img {
@@ -304,11 +343,11 @@ footer a {
 
 #manifesto-content .hero-title {
  text-align: left;
- color: var(--color-emerald-green);
+ color: var(--color-dark-gol);
 }
 
 .hero-subtitle {
-  color: var(--color-cream);
+  color: var(--color-dark-gold);
   display: block;
   line-height: 1.3;
 }
@@ -317,11 +356,6 @@ footer a {
   position: relative;
   text-align: center;
   color: white;
-}
-
-
-h1 {
-  color: var(--color-headers);
 }
 
 h2 {
@@ -769,18 +803,21 @@ ol li {
 
 .donut{
   position: relative;
-  left: 21vw;
+  left: 10vw;
+  top: -26vw;
  /* z-index: -1;*/
-  width: 20em;
+  width: 10em;
   overflow: hidden;
+  transform: rotate(45deg);
 }
+
 .hexagon {
   position: relative;
   left: 31vw;
   /* z-index: -1; */
   overflow-wrap: hidden;
   width: 20em;
-  top: -47vw;
+  top: -23vw;
   }
 
 .game-distorted {
@@ -791,15 +828,10 @@ ol li {
   overflow: hidden;
 }
 
-
-
-
-
-
 .shape-15 {
-  position: absolute;;
+  position: absolute;
   left: 0;
-  /*z-index: 2;*/
+  z-index: 4;
   width: 15em;
 }
 
@@ -814,7 +846,7 @@ ol li {
 body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 120vh;
   width: 100%;
   orphans: 3;
 }
@@ -924,6 +956,20 @@ body {
 
 @media screen and (min-width: 300px) {
 
+.hexagon {
+    position: relative;
+    left: 10vw;
+    /* z-index: -1; */
+    overflow-wrap: hidden;
+    width: 10em;
+    top: -23vw;
+   }
+
+.bridge {
+  width: 10em;
+  z-index: 4;
+}
+
 .anthony-img {
    width: 60%;
    margin: 0 auto;
@@ -977,7 +1023,7 @@ body {
 
 
 .hero-image {
-  background-image: url('../img/hero/g_Misfits_30082019_Shot_7_403-Recovered@2x.jpg');
+  background-color: #EEBC70;
   overflow: hidden;
   background-repeat: no-repeat;
   background-size: cover;
@@ -986,8 +1032,9 @@ body {
   border-radius: 18px;
   margin-left: auto;
   margin-right: auto;
+  
   width: 90%;
-  z-index: 2;
+  z-index: 3;
 }  
 
 .anthony-img img{
@@ -1053,12 +1100,12 @@ body {
 
 
 
-.textbox {
+/* .textbox {
   height: 120px;
-}
+} */
 
 .textbox .hero-title, .hero-subtitle, .content h3 {
-  color: var(--color-text);
+  color: var(--color-dark-gol);
 }
 
 .hero-wrapper {
@@ -1099,10 +1146,10 @@ body {
     width: 38em;
   }
 
-  .textbox {
+  /* .textbox {
     position: absolute;
     top: -12px;
-  }
+  } */
 
   .hero-image {
     width: 85%;
@@ -1117,9 +1164,9 @@ body {
 
   }
 
-  .textbox .hero-title, .hero-subtitle {
-  color: var(--color-headers);
-  }
+  /* .textbox .hero-title, .hero-subtitle {
+  color: var(--color-dark-gol);
+  } */
 
 
  .tactical {
@@ -1182,7 +1229,7 @@ body {
   }
 
   .shape-15 {
-    top: 21vh;
+    top: 31vh;
   }
 
   .anthony-img {
@@ -1717,9 +1764,9 @@ body {
 
 
 #manifesto-2 {
-  color: var(--color-emerald-green);
+  color: var(--color-cream);
   position: relative;
-  /*background: var(--color-cream);*/
+  background: var(--color-emerald-green);
 }
 
 #canvas {
@@ -1744,7 +1791,7 @@ body {
 }
 
 #manifesto {
-    background-image: url('../img/background-for-manifesto-01-01.jpg');
+    background-image: url('../public/img/background-for-manifesto-01-01.jpg');
     background-size: 60% auto;
     text-align: center;
     cursor: hand;
@@ -1752,7 +1799,6 @@ body {
     padding: 10vh;
     z-index: 10;
 }
-
 
 #manifesto:hover {
   animation: wavy 16s linear infinite;
@@ -1824,7 +1870,24 @@ body {
   .main-content {
     padding-left: var(--sp-2b);
     padding-right: var(--sp-2b);
-    margin-bottom: 100px;
+    height: 70vh;
+  }
+}
+
+@media screen and (min-width: 750px) {
+
+  #testimonial-wrapper {
+     flex-flow: wrap;
+  }
+
+  .block-shapes {
+    z-index: -1;
+  }
+
+  .main-content {
+    padding-left: var(--sp-2b);
+    padding-right: var(--sp-2b);
+    margin-bottom: 20vh;
   }
 }
 
@@ -2357,7 +2420,7 @@ body {
 
 
 .hero-subtitle {
-  color: var(--color-cream);
+  color: var(--color-dark-gol);
 }
 
 .base {
@@ -2575,8 +2638,10 @@ body {
 @media screen and (min-width: 1000px) {
 
   #anthony {
+    padding-top: 70px;
     padding-left: 98px;
     padding-right: 350px;
+    height: 40vw;
   }
 
 .hero-title {
@@ -2630,6 +2695,9 @@ body {
 
 .content {
   padding-top: 0px;
+  border: 1px solid var(--color-dark-gold-50p);
+  width: 60%;
+  margin: 0 auto;
 }
 
   .hero-graphic {
